# my-first-mcp

./: README.md  pyproject.toml
my_first_mcp/: app.py  db.py  depends.py  dev_runner.py  mcp copy.py  mcp.py  mcp_server.py  run.py
my_first_mcp/controllers/: dog_controller.py
my_first_mcp/domain/: dog.py
my_first_mcp/repositories/: dog_repository.py
my_first_mcp_client/: client.py
