[project]
dependencies = [
  "fastapi>=0.115.12",
  "fastmcp>=2.2.6",
  "mcp>=1.7.1",
  "sse-starlette>=2.3.3",
  "uvicorn>=0.34.2",
]
description = "Add your description here"
name = "my-first-mcp"
readme = "README.md"
requires-python = "<3.14,>=3.12"
version = "0.1.0"

[tool.poe.tasks]
# api.shell = "uvicorn my_first_mcp.app:app --reload --workers 1"
# mcp.script = "my_first_mcp.run:run_http"
# app.script = "my_first_mcp.run:run_mcp_and_api"

# api.shell = "uvicorn my_first_mcp.mcp:app --reload --port 9000"

# FastMCP server
# mcp.shell = "uvicorn my_first_mcp.mcp:sse_mcp --reload --port 8000"

# Combo runner (requires concurrently installed)
# dev.shell = "concurrently -n api,mcp -c blue,green \"poe api\" \"poe mcp\""

dev.shell = "python my_first_mcp/dev_runner.py"

[dependency-groups]
dev = [
  "assertpy>=1.1",
  "httpx>=0.28.1",
  "poethepoet>=0.34.0",
  "pytest>=8.3.5",
  "pytest-sugar>=1.0.0",
  "watchfiles>=1.0.5",
]

[tool.ruff]
line-length = 120

[tool.uv.sources]
mcp = { path = "../../other/python-sdk", editable = true }
